--- a/credit.html
+++ b/credit.html
@@ -39,8 +39,6 @@
                                           <td class=credittable>Background used on the index page.</td>
                                       </tr>
                                       <tr>
-                                          <td class=credittable><a href="https://cooltext.com/Logo-Design-Fun">Cool Text</a></td>
-                                          <td class=credittable>"BUNBLADES" logo on index page.</td>
                                       </tr>
                                       <tr>
                                           <td class=credittable>
@@ -131,6 +129,14 @@
                                       </tr>
                                       <tr>
                                           <td class=credittable>
+                                              <a href="https://nekoweb.org/">Nekoweb</a>
+                                          </td>
+                                          <td class=credittable>
+                                              Another site to make your own cool website!
+                                          </td>
+                                      </tr>
+                                      <tr>
+                                          <td class=credittable>
                                               <a href="https://neocities.org/tutorials">Neocities Tutorials</a>
                                           </td>
                                           <td class=credittable>
@@ -153,7 +159,20 @@
                                           <td class=credittable>
                                               Generate CSS code for custom gradients.
                                           </td>
+                                            <tr>
+                                          <td class=credittable>
+                                              <a href="https://github.com/">Github Pages</a>
+                                          </td>
+                                          <td class=credittable>
+                                              This is where this site is hosted.
+                                          </td>   
                                       </tr>
+                                       <td class=credittable>
+                                              <a href="https://www.namecheap.com/">Namecheap</a>
+                                          </td>
+                                          <td class=credittable>
+                                              Place to buy domains for decent price.
+                                          </td>
                                   </table>
                                   
                                   <br><br><h5><b>Cool Links</b></h5>
