--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                   </a>
                 </p></center>
               </div>
+              <center>
+                <div id="secret"><a style="opacity: var(0);" href="/foryou">&nbsp&nbsp&nbsp</a></div>
+              </center>
           </div>
           <div id="sidebar-right">
             <div id="box">
