--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
               <p>
                 <ul>
                   <li>
+                    <b>08/24/2025</b> - 
+                    <i>added an "about" section! i'll add more to it later. I also cleaned up some code and will hopefully get into the groove of updating this site more frequently</i>
+                  </li><br>
+                  <li>
                     <b>11/26/2024</b> - 
                     <i>kinda small kinda big update! some parts of the main page are moved around and whatnot. i also rewrote the css so that now the site SHOULD be more friendly to portrait orientated devices. i think. no promises on that though </i>
                   </li><br>
@@ -193,16 +197,16 @@
                 </ul>
               </p>
           </div>
-          <div class="box2" style="margin-left:auto;;">
+          <div class="box2" style="margin-left:auto;">
               <h1 style="text-align:center;"> to-do list!
                 <img style="transform:scaleX(-1);" src="index/graphics/vocaloid.png">
               </h1>
               <p>
                 <ul>
                   <li>
-                    <i>
+                    <s><i>
                     make "about" page 
-                    </i>
+                    </i></s>
                   </li>
                   <li>
                     <i>
@@ -220,9 +224,9 @@
                     </i>
                   </li>
                   <li>
-                    <i>
+                    <s><i>
                     rework carrd
-                    </i>
+                    </i></s>
                   </li>
                   <li>
                     <i>
@@ -264,11 +268,11 @@
                     home
                   </a>
                 </li>
-                <s><li>
-                <a href="/">
+                <li>
+                <a href="/about.html">
                   about
                 </a>
-                </li></s>
+                </li>
                 <s><li>
                   <a href="/">
                     credit
