--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
                 you enjoy what all there is to see here!
 
               </p>
-        </div>
-        <div class="box">
+        </div><br>
+        <div class="box2" style="width:95%;margin:auto;">
           <center><h1>
             webrings
           </h1>
@@ -63,16 +63,18 @@
 			      <!--END OF SELF INSERT WEBRING-->
 
           </p></center>
-        </div>
-        <div class="box">
+        </div><br>
+        <div class="box2" style="width:95%;margin:auto;">
             <center><h1> 
                 quiz results
             </h1>
             <p>
-              items to be added
+              <a href="https://andou.gay/quiz/donutquiz"><img src="https://andou.gay/quiz/glazed donut.png"></a> 
+              <a href="http://thousandroads.net/misc/pmdquiz/"><img src="http://thousandroads.net/misc/pmdquiz/static/results/Cubone.png" alt="I am Cubone!" /></a> 
+              <A href="https://www.theotaku.com/quizzes/view/4059/which_member_of_the_mane_7_are_you%3F"><img border="0" src="http://www.theotaku.com/guru_results/4059_Twilight_Sparkle.jpg" alt="Which Member of the Mane 7 Are You?" /><br /></a><A href="https://www.theotaku.com/quizzes/view/4059/which_member_of_the_mane_7_are_you%3F">Which Member of the Mane 7 Are You?</A><br />Hosted By theOtaku.com: <a href="http://www.theotaku.com" title="Anime">Anime</a>
             </p>
           </center>
-        </div>
+        </div><br>
         <div class="box" style="margin:0;background:none;border:0px;box-shadow:0px 0px 0px 0px;border-radius:0;">
           <div class="box2" style="float:left;">
             <center><h1>
@@ -104,7 +106,7 @@
                 </li><br>
                 <li>
                   <b>Fictional Characters:</b><br>
-                  <i><u>Shadow (Sonic the Hedgehog)</u>, Aigis (Persona), Akechi (Persona), Eito (Hundred Line), <u>Noelle (Deltarune)</u>, Susie (Deltarune)</i>, Soren (Fire Emblem)
+                  <i><u>Shadow (Sonic the Hedgehog)</u>, Amy (Sonic the Hedgehog), Aigis (Persona 3), Akechi (Persona 5), Eito (Hundred Line), Eva (Hundred Line), Takumi (Hundred Line), <u>Noelle (Deltarune)</u>, Susie (Deltarune)</i>, Soren (Fire Emblem)
                 </li><br>
               </ul>
             </p>
@@ -154,13 +156,13 @@
                   </a>
                 </li>
                 <li>
-                <a href="/">
+                <a href="/about.html">
                   about
                 </a>
                 </li>
                 <s><li>
                   <a href="/">
-                    credit
+                    resources
                   </a>
                 </li></s>
                 <li>
@@ -176,15 +178,50 @@
               </ul>
             </p>
           </div>
-        <div class="box">
-          <p>
-            items to be added
-          </p>
+        <div class="box" style="height:410px;">
+          <center><p>
+            <a href="https://3ds.hacks.guide/"><img class="button" src="/index/88x31/3ds.jpg"></a>
+            <img class="button" src="/index/88x31/amyrose.jpg">
+            <img class="button" src="/index/88x31/antinft.png">
+            <img class="button" src="/index/88x31/autismpride.png">
+            <img class="button" src="/index/88x31/bestviewed.jpg">
+            <a href="https://bitwarden.com/"><img class="button" src="/index/88x31/bitwarden.gif"></a>
+            <img class="button" src="/index/88x31/dontfeedai.gif">
+            <img class="button" src="/index/88x31/dreamcast.png">
+            <img class="button" src="/index/88x31/drmario.gif">
+            <img class="button" src="/index/88x31/drpepper.gif">
+            <img class="button" src="/index/88x31/ffiv.gif">
+            <a href="https://www.firefox.com/en-US/"><img class="button" src="/index/88x31/firefox.gif"></a>
+            <img class="button" src="/index/88x31/gameboyadvance.png">
+            <img class="button" src="/index/88x31/girl.webp">
+            <a href="https://github.com/"><img class="button" src="/index/88x31/github.gif"></a>
+            <img class="button" src="/index/88x31/hello_kitty.gif">
+            <a href="https://www.w3schools.com/html/"><img class="button" src="/index/88x31/html.png"></a>
+            <a href="https://archive.org/"><img class="button" src="/index/88x31/internetarchive.gif"></a>
+            <a href="https://neocities.org/"><img class="button" src="/index/88x31/neocities.gif"></a>
+            <img class="button" src="/index/88x31/nonbinary.jpg">
+            <img class="button" src="/index/88x31/notchrome.gif">
+            <img class="button" src="/index/88x31/piracy.png">
+            <a href="https://www.fedoraproject.org/"><img class="button" src="/index/88x31/poweredbyfedora.gif"></a>
+            <img class="button" src="/index/88x31/sega-elite.gif">
+            <img class="button" src="/index/88x31/segasaturn.webp">
+            <a href="https://serenesforest.net/"><img class="button" src="/index/88x31/serenesforest.png"></a>
+            <img class="button" src="/index/88x31/sonicadventure2.png">
+            <img class="button" src="/index/88x31/sonicriders.jpg">
+            <a href="https://www.sonicstadium.org/"><img class="button" src="/index/88x31/sonicstadium.gif"></a>
+            <img class="button" src="/index/88x31/sonicx.jpg">
+            <a href="https://steamcommunity.com/"><img class="button" src="/index/88x31/steam.gif"></a>
+            <img class="button" src="/index/88x31/swatch.gif">
+            <img class="button" src="/index/88x31/tails.png">
+            <img class="button" src="/index/88x31/theythem.png">
+            <img class="button" src="/index/88x31/virovirokun.webp">
+            <a href="https://code.visualstudio.com/"><img class="button" src="/index/88x31/vscode.gif"></a>
+            <img class="button" src="/index/88x31/xp.gif">
+          </p></center>
         </div>
       </div>
     </div>
     <div class="footer">
-
       </div>
     </div>
   </body>
