--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <b>about</b> - this is where you can learn more about the webmistress
               </li>
               <li>
-                <b>credit</b> - various credits for resources used to make this site
+                <b>resources</b> - various credits for resources used to make this site, and fun links to use
               </li>
               <li>
                 <b>socials</b> - social media and other places to find me
@@ -275,7 +275,7 @@
                 </li>
                 <s><li>
                   <a href="/">
-                    credit
+                    resources
                   </a>
                 </li></s>
                 <li>
@@ -325,40 +325,7 @@
       </div>
     </div>
     <div class="footer">
-      <center>
-      <p>
-        <a href="https://graphic.neocities.org/">
-          <img src="https://graphic.neocities.org/Button2.png">
-        </a>
-        <a href="https://plumbum.neocities.org/">
-          <img src="https://plumbum.neocities.org/Button.png">
-        </a>
-          <img src="/index/88x31/html.png">
-          <img src="/index/88x31/bestviewed.jpg">
-          <img src="/index/88x31/antinft.png">
-          <img src="/index/88x31/dontfeedai.gif">
-          <img src="/index/88x31/vscode.gif">
-          <a href="https://archlinux.org/">
-            <img src="/index/88x31/archlinux.gif">
-          </a>
-          <a href="https://pages.github.com/">
-            <img src="/index/88x31/github.gif">
-          </a>
-          <a href="https://nekoweb.org/">
-            <img src="https://nekoweb.org/assets/buttons/button11.gif">
-          </a>
-          <!-- button by milkyway.moe -->
-          <a href="https://neocities.org">
-            <img src="/index/88x31/neocities.gif">
-          </a>
-          <a href="https://www.mozilla.org/en-US/firefox/">
-            <img src="/index/88x31/notchrome.gif">
-          </a>
-          <a href="https://web.archive.org/">
-            <img src="/index/88x31/internetarchive.gif">
-          </a>
-        </p></center>
-      </div>
+      </div><br>
     </div>
   </body>
 </html>
